--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
